[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core>=1.0.0']

[tool]
[tool.coverage]
[tool.coverage.paths]
source = ['src', '*/site-packages']
tests = ['tests', '*/tests']

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
source = ['maze']


[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[tool.poetry]
authors = ['Eric Chiang <serixscorpio@gmail.com>']
classifiers = ['Development Status :: 1 - Planning']
description = 'A library for generating a maze.'
homepage = 'https://github.com/serixscorpio/maze'
license = 'MIT'
name = 'ec-maze'
readme = 'README.rst'
repository = 'https://github.com/serixscorpio/maze'
version = '0.0.1'
packages = [{ include = "maze", from = "src" }]
[tool.poetry.dependencies]
attrs = '^22.1.0'
click = '^8.1.3'
flake8-bugbear = '^22.10.27'
pep8-naming = '^0.13.2'
pillow = '^9.2.0'
pytest = '^7.2.0'
python = '^3.10'
pyupgrade = '^3.1.0'
types-pillow = '^9.2.1'

[tool.poetry.dev-dependencies]
bandit = '^1.7.4'
black = '^22.8.0'
darglint = '^1.8.1'
flake8 = '^5.0.4'
flake8-bugbear = '^22.8.23'
flake8-docstrings = '^1.6.0'
flake8-rst-docstrings = '^0.2.7'
mypy = '^0.971'
pep8-naming = '^0.13.0'
pre-commit = '^2.20.0'
pre-commit-hooks = '^4.3.0'
pygments = '^2.13.0'
pytest = '^7.1.2'
pyupgrade = '^3.2.0'
reorder-python-imports = '^3.8.2'
safety = '^2.3.1'
typeguard = '^2.13.2'
[tool.poetry.dev-dependencies.coverage]
extras = ['toml']
version = '^6.4.1'


[tool.poetry.scripts]
maze = 'maze.__main__:main'

[tool.poetry.urls]
changelog = 'https://github.com/serixscorpio/maze/releases'
