[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling']

[tool]
[tool.coverage]
[tool.coverage.paths]
source = ['src', '*/site-packages']
tests = ['tests', '*/tests']

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
source = ['maze']


[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[project]
authors = [{name = 'Eric Ti Yu Chiang', email = 'eric.ti.yu.chiang@gmail.com'}]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3.10'
]
dependencies = [
    "attrs>=22.1.0",
    "click>=8.1.0",
    "pillow>=9.2.0",
    "types-pillow>=9.2.1",
]
description = 'A library for generating a maze.'
dynamic = ["version"]
license = 'MIT'
name = 'ec-maze'
readme = 'README.rst'
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "bandit>=1.7.4",
    "black>=22.10.0",
    "darglint>=1.8.1",
    "flake8>=6.0.0",
    "flake8-bugbear>=22.10.27",
    "flake8-docstrings>=1.6.0",
    "flake8-rst-docstrings>=0.3.0",
    "isort>=5.10.1",
    "mypy>=0.991",
    "pep8-naming>=0.13.2",
    "pre-commit>=2.20.0",
    "pre-commit-hooks>=4.4.0",
    "pygments>=2.13.0",
    "pytest>=7.2.0",
    "pyupgrade>=3.2.2",
    "safety>=2.3.2",
    "typeguard>=2.13.3",
]

[project.urls]
Source = 'https://github.com/serixscorpio/maze'

[project.scripts]
maze = 'ec_maze:main'

[tool.hatch.version]
path = "src/ec_maze/__init__.py"