[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling']

[tool]
[tool.coverage]
[tool.coverage.paths]
source = ['src', '*/site-packages']
tests = ['tests', '*/tests']

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
source = ['maze']


[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[project]
authors = [{name = 'Eric Ti Yu Chiang', email = 'eric.ti.yu.chiang@gmail.com'}]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3.11'
]
dependencies = [
    "attrs>=22.1.0",
    "click>=8.1.0",
    "pillow>=9.2.0",
    "types-pillow>=9.2.1",
]
description = 'A library for generating a maze.'
dynamic = ["version"]
license = 'MIT'
name = 'ec-maze'
readme = 'README.md'
requires-python = ">=3.11"

[project.urls]
Source = 'https://github.com/serixscorpio/maze'

[project.scripts]
maze = 'ec_maze:main'

[tool.hatch.version]
path = "src/ec_maze/__init__.py"

[tool.ruff]
line-length = 120
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit
    "W", # pycodestyle warnings
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"] # flake8-bandit: Use of assert detected.